[project]
name = "foundry-err1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework-ag-ui>=1.0.0b251204",
    "dotenv>=0.9.9",
    "poethepoet>=0.38.0",
]

[tool.poe.tasks]
server = "python server.py"
client = "python client.py"
